# person_sensor_pico_c

./: .gitignore  CMakeLists.txt  README.md  face_detection_example.c  face_recognition_example.c  person_sensor.h  person_sensor_i2c.c  scan_i2c.c
